fixed sonarlint warnings